--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,15 +1,8 @@
 {
-  "name": "web",
+  "name": "@abb/web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
     "antd": "^3.26.11",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
@@ -22,8 +15,8 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "typescript": "~3.7.2",
-    "yup": "^0.28.1"
+    "yup": "^0.28.1",
+    "@abb/common": "1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,6 +41,14 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.3",
-    "@types/yup": "^0.26.31"
+    "@types/yup": "^0.26.31",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "typescript": "~3.7.2"
   }
 }
