complete apollo code-gen

--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -5,7 +5,10 @@
   "typings": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf ./dist && tsc"
+    "build": "rimraf ./dist && tsc",
+    "introspect": "npx apollo client:download-schema --endpoint=http://localhost:4000 schema.graphql",
+    "generate": "npx apollo client:codegen --target typescript --localSchemaFile ./schema.graphql",
+    "gen-types": "yarn introspect && yarn generate"
   },
   "dependencies": {
     "graphql": "^14.6.0",
@@ -18,6 +21,7 @@
     "@types/node": "^13.7.7",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "apollo-codegen": "^0.20.2",
     "rimraf": "^3.0.2",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
