--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
     "private": true,
-    "workspaces": [
-        "packages/*"
-    ],
+    "workspaces": {
+       "packages": [ "packages/*"
+      ],
+      "nohoist": [
+          "**/rimraf",
+          "**/rimraf/**"
+      ]
+    },
     "dependencies": {
         "create-react-app": "^3.4.0"
     }
