--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,13 +19,15 @@
     "@types/uuid": "^3.4.3",
     "@types/ws": "^5.1.2",
     "@types/yup": "^0.24.3",
+    "copyfiles": "^2.2.0",
     "gql2ts": "^1.7.2",
     "nodemon": "^1.17.3",
+    "rimraf": "^3.0.2",
     "ts-jest": "^22.4.4",
     "ts-node": "6.0.0",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.12.0",
-    "typescript": "^2.9.1"
+    "typescript": "^3.8.3"
   },
   "dependencies": {
     "@abb/common": "1.0.0",
@@ -62,6 +64,7 @@
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
     "test": "NODE_ENV=test jest --watch",
+    "build": "rimraf ./dist && tsc && copyfiles -u 1 src/**/*.graphql dist",
     "gen-schema-types": "ts-node src/scripts/createTypes.ts"
   },
   "jest": {
