--- a/.dockerignore
+++ b/.dockerignore
@@ -2,8 +2,8 @@
 !./package.json
 !./packages/server/package.json 
 !./packages/common/package.json
-!./packages/server/dist/
-!./packages/common/dist/
+!./packages/server/dist
+!./packages/common/dist
 !./packages/server/.env.prod
 !./packages/server/.env.example
 !./ormconfig.json
