--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,21 +2,8 @@
   {
     "name": "production",
     "type": "postgres",
-    "host": "10.41.152.100",
-    "port": 5432,
-    "username": "postgres",
-    "password": "",
-    "database": "postgresdb",
     "synchronize": true,
-    "logging": true,
-    "entities": ["src/entity/**/*.js"],
-    "migrations": ["src/migration/**/*.js"],
-    "subscribers": ["src/subscriber/**/*.js"],
-    "cli": {
-      "entitiesDir": "src/entity",
-      "migrationsDir": "src/migration",
-      "subscribersDir": "src/subscriber"
-    }
+    "logging": true
   },
   {
     "name": "development",
