--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
     "private": true,
+    "scripts": {
+        "build:server": "lerna run build --scope={@abb/server,@abb/common}"
+    },
     "workspaces": {
-       "packages": [ "packages/*"
-      ],
-      "nohoist": [
-          "**/rimraf",
-          "**/rimraf/**"
-      ]
+        "packages": [
+            "packages/*"
+        ],
+        "nohoist": [
+            "**/rimraf",
+            "**/rimraf/**"
+        ]
     },
     "dependencies": {
         "create-react-app": "^3.4.0"
+    },
+    "name": "abb",
+    "devDependencies": {
+        "lerna": "^3.20.2"
     }
 }
