complete CI CD web server

--- a/dockerfile/Dockerfile.server
+++ b/dockerfile/Dockerfile.server
@@ -1,5 +1,6 @@
 FROM node
 
+# making 'abb' directory and working on it after this
 WORKDIR /abb
 
 RUN ls -a
@@ -8,7 +9,7 @@ RUN pwd
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
-COPY package.json .
+COPY package.json ./
 COPY ./packages/server/package.json ./packages/server/
 COPY ./packages/common/package.json ./packages/common/
 RUN ls -a
@@ -19,7 +20,7 @@ COPY ./packages/common/dist/ ./packages/common/dist/
 COPY ./packages/server/dist/ ./packages/server/dist/
 COPY ./packages/server/.env.prod ./packages/server/.env
 COPY ./packages/server/.env.example ./packages/server/
-COPY ./ormconfig.json .
+COPY ./ormconfig.json ./
 
 # RUN npm i -g yarn 999   # node 13 버전은 yarn 사전 탑재됨
 RUN yarn install --production
