--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -21,13 +21,13 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
-    "types": [
-      "jest",
-      "node",
-      "react",
-      "react-dom",
-      "react-router-dom"
-    ],
+    // "types": [
+    //   "jest",
+    //   "node",
+    //   "react",
+    //   "react-dom",
+    //   "react-router-dom"
+    // ],
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
