--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@abb/app",
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,12 +10,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@types/react-native-elements": "^0.18.0",
-    "@types/react-router": "^5.1.4",
+    "@abb/common": "1.0.0",
+    "@types/react": "^16.9.25",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.16",
     "expo": "^36.0.2",
+    "formik": "^2.1.4",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
     "react": "~16.9.0",
@@ -30,9 +32,11 @@
     "@babel/core": "^7.0.0",
     "@types/react": "~16.9.0",
     "@types/react-native": "~0.60.23",
+    "@types/react-native-elements": "^0.18.0",
+    "@types/react-router": "^5.1.4",
     "@types/react-router-native": "^5.1.0",
     "babel-preset-expo": "~8.0.0",
-    "typescript": "~3.6.3"
+    "typescript": "~3.7.2"
   },
   "private": true
 }
