--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -1,11 +1,24 @@
 {
   "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "jsx":"react-native",
+    "lib": ["es6", "esnext"],
+    "strict": true,
+    "esModuleInterop": true,
+    "rootDir": "src",
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": false,
+    "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": true,
+    "skipLibCheck": true,
+
     "allowSyntheticDefaultImports": true,
-    "jsx": "react-native",
-    "lib": ["dom", "esnext"],
     "moduleResolution": "node",
     "noEmit": true,
-    "skipLibCheck": true,
     "resolveJsonModule": true
   }
 }
