--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,6 +1,5 @@
 {
     "name": "@abb/common",
-    "private": true,
     "version": "1.0.0",
     "main": "dist/index.js",
     "typings": "dist/index.d.ts",
@@ -14,16 +13,20 @@
         "tslint": "^6.0.0",
         "tslint-config-prettier": "^1.18.0",
         "typescript": "^3.6.3"
-
     },
     "dependencies": {
         "yup": "^0.28.1"
     },
+    "private": true,
     "workspaces": {
 
         "nohoist": [
             "**/yup",
-            "**/yup/**"
+            "**/yup/**",
+            "**/rimraf",
+            "**/rimraf/**",
+            "**/typescript",
+            "**/typescript/**"
         ]
     }
 }
