--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -13,18 +13,25 @@
   "dependencies": {
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
-    "react": "^16.13.0",
-    "react-apollo": "^3.1.3",
-    "react-dom": "^16.13.0"
+    "react": "16.9.0",
+    "react-apollo": "3.0.0",
+    "react-dom": "16.9.0"
   },
   "devDependencies": {
     "@types/node": "^13.7.7",
-    "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.5",
+    "@types/react": "16.9.0",
+    "@types/react-dom": "16.9.0",
     "apollo-codegen": "^0.20.2",
     "rimraf": "^3.0.2",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.6.3"
+  },
+  "private": true,
+  "workspaces": {
+    "nohoist": [
+      "**/rimraf",
+      "**/rimraf/**"
+    ]
   }
 }
