--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@abb/server",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@gql2ts/types": "^1.8.0",
@@ -25,7 +25,7 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^22.4.4",
     "ts-node": "6.0.0",
-    "tslint": "^5.9.1",
+    "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.12.0",
     "typescript": "^3.6.3"
   },
@@ -80,6 +80,13 @@
       "jsx",
       "json",
       "node"
+    ]
+  },
+  "private": true,
+  "workspaces": {
+    "nohoist": [
+      "**/rimraf",
+      "**/rimraf/**"
     ]
   }
 }
