--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,24 +1,6 @@
 {
   "name": "@abb/web",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "antd": "^3.26.11",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
-    "apollo-link-http": "^1.5.16",
-    "formik": "^2.1.4",
-    "graphql": "^14.6.0",
-    "graphql-tag": "^2.10.3",
-    "react": "^16.12.0",
-    "react-apollo": "^3.1.3",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "yup": "^0.28.1",
-    "@abb/common": "1.0.0",
-    "@abb/controller": "1.0.0"
-  },
+  "version": "1.0.0",
   "resolutions": {
     "graphql": "14.6.0"
   },
@@ -26,7 +8,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cleanDependency": "rm -rf node_modules ../../node_modules ../../yarn.lock && yarn cache clean"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,16 +26,42 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "@abb/common": "1.0.0",
+    "@abb/controller": "1.0.0",
+    "antd": "^3.26.11",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "2.6.3",
+    "apollo-link-http": "^1.5.16",
+    "formik": "^2.1.4",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
+    "react": "16.9.0",
+    "react-apollo": "3.0.0",
+    "react-dom": "16.9.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "yup": "^0.28.1"
+  },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.3",
-    "@types/yup": "^0.26.31",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/react": "16.9.0",
+    "@types/react-dom": "16.9.0",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/yup": "^0.26.31",
     "typescript": "~3.6.3"
+  },
+  "private": true,
+  "workspaces": {
+    "nohoist": [
+      "**/rimraf",
+      "**/rimraf/**",
+      "**/react-scripts",
+      "**/react-scripts/**"
+    ]
   }
 }
