--- a/packages/app/app.json
+++ b/packages/app/app.json
@@ -1,7 +1,7 @@
 {
 
   "expo": {
-    "name": "app",
+    "name": "@abb/app",
     "slug": "app",
     "privacy": "unlisted",
     "sdkVersion": "36.0.0",
