--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -6,9 +6,10 @@
   "license": "MIT",
   "scripts": {
     "build": "rimraf ./dist && tsc",
-    "introspect": "npx apollo client:download-schema --endpoint=http://localhost:4000 schema.graphql",
-    "generate": "npx apollo client:codegen --target typescript --localSchemaFile ./schema.graphql",
-    "gen-types": "yarn introspect && yarn generate",
+    "schema:download": "npx apollo client:download-schema --endpoint=http://49.50.163.26:4000 schema.graphql",
+    "codegen:generate": "npx apollo client:codegen --target=typescript --localSchemaFile=./schema.graphql --outputFlat=./src/schemaTypes.ts",
+    "gen:types": "yarn schema:download && yarn codegen:generate",
+    "refresh:types": "yarn gen:types && yarn build",
     "cleanController": "rm -rf node_modules ../../node_modules ../../yarn.lock"
   },
   "dependencies": {
@@ -24,6 +25,7 @@
     "@types/node": "^13.7.7",
     "@types/react": "16.9.0",
     "@types/react-dom": "16.9.0",
+    "apollo": "^2.25.0",
     "apollo-codegen": "^0.20.2",
     "rimraf": "^3.0.2",
     "tslint": "^6.0.0",
