--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -6,9 +6,9 @@
   "license": "MIT",
   "scripts": {
     "build": "rimraf ./dist && tsc",
-    "schema:download": "npx apollo client:download-schema --endpoint=http://localhost:4000 schema.graphql",
+    "schema:download": "npx apollo client:download-schema --endpoint=http://localhost:4000 schema.json",
     "schema:downloadFromEx": "npx apollo client:download-schema --endpoint=http://49.50.163.26:4000 schema.graphql",
-    "codegen:generate": "npx apollo client:codegen --target=typescript --localSchemaFile=./schema.graphql --outputFlat=./src/schemaTypes.ts",
+    "codegen:generate": "npx apollo client:codegen --target=typescript --localSchemaFile=./schema.json --outputFlat=./src/schemaTypes.ts",
     "gen:types": "yarn schema:download && yarn codegen:generate",
     "refresh:types": "yarn gen:types && yarn build",
     "cleanController": "rm -rf node_modules ../../node_modules ../../yarn.lock"
@@ -30,9 +30,9 @@
     "apollo": "2.26.0",
     "apollo-codegen": "^0.20.2",
     "rimraf": "^3.0.2",
-    "tslint": "^6.0.0",
+    "tslint": "^6.1.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.6.3"
+    "typescript": "~3.6.3"
   },
   "resolutions": {
     "react": "16.9.0",
