--- a/packages/controller/tsconfig.json
+++ b/packages/controller/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "dist",
+    "outDir": "./dist/",
     "module": "CommonJS",
     "target": "ESNext",
     "lib": [
