--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -16,10 +16,11 @@
   "dependencies": {
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
-   
     "react": "16.9.0",
+    "react-apollo": "3.1.1",
     "react-dom": "16.9.0",
-    "react-apollo": "3.1.3"
+    
+    "@apollo/react-hooks":"~3.1.4"
   },
   "devDependencies": {
     "@babel/core": "~7.6.0",
@@ -46,10 +47,6 @@
       "**/typescript",
       "**/typescript/**",
       "**/tslint",
-
-   
- 
-      
       "**/@babel/runtime",
       "**/@babel/runtime/**"
     ]
