--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,6 +14,7 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^9.6.6",
     "@types/node-fetch": "^1.6.9",
+    "@types/nodemailer": "^6.4.0",
     "@types/request-promise": "^4.1.41",
     "@types/sparkpost": "^2.1.3",
     "@types/uuid": "^3.4.3",
@@ -49,6 +50,7 @@
     "ioredis": "^3.2.2",
     "merge-graphql-schemas": "^1.5.1",
     "node-fetch": "^2.1.2",
+    "nodemailer": "^6.4.6",
     "pg": "^7.4.1",
     "rate-limit-redis": "^1.4.0",
     "reflect-metadata": "^0.1.12",
