--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,7 +7,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "^0.0.13",
     "@types/express": "^4.17.6",
-    "@types/express-rate-limit": "^2.9.3",
+    "@types/express-rate-limit": "2.9.8",
     "@types/express-session": "^1.17.0",
     "@types/faker": "^4.1.11",
     "@types/glob": "^5.0.35",
@@ -19,7 +19,7 @@
     "@types/rate-limit-redis": "^1.7.1",
     "@types/request-promise": "^4.1.41",
     "@types/uuid": "^7.0.2",
-    "@types/ws": "^5.1.2",
+    "@types/ws": "^7.2.4",
     "@types/yup": "^0.26.36",
     "copyfiles": "^2.2.0",
     "gql2ts": "^1.10.1",
@@ -39,15 +39,15 @@
     "connect-redis": "^4.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-rate-limit": "^2.11.0",
+    "express-rate-limit": "2.13.0",
     "express-session": "^1.17.0",
     "faker": "^4.1.0",
-    "glob": "^7.1.2",
+    "glob": "^7.1.6",
     "graphql": "14.6.0",
-    "graphql-import": "^0.5.0",
-    "graphql-tools": "^3.0.0",
-    "graphql-yoga": "^1.9.2",
-    "ioredis": "^3.2.2",
+    "graphql-import": "^1.0.2",
+    "graphql-tools": "^5.0.0",
+    "graphql-yoga": "^1.18.3",
+    "ioredis": "^4.16.2",
     "merge-graphql-schemas": "^1.7.7",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.6",
@@ -57,7 +57,7 @@
     "request-promise": "^4.2.5",
     "typeorm": "^0.2.24",
     "uuid": "^7.0.3",
-    "yup": "^0.28.1"
+    "yup": "^0.28.3"
   },
   "resolutions": {
     "graphql": "14.6.0"
