--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -45,6 +45,8 @@
     "glob": "^7.1.6",
     "graphql": "14.6.0",
     "graphql-import": "^1.0.2",
+    "graphql-middleware": "^4.0.2",
+    "graphql-shield": "^7.2.5",
     "graphql-tools": "^5.0.0",
     "graphql-yoga": "^1.18.3",
     "ioredis": "^4.16.2",
