--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -26,8 +26,7 @@
     "strict": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "baseUrl": "."
+    "noEmit": true
   },
   "include": [
     "src"
