--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -15,12 +15,7 @@ services:
         container_name: docker-db
 
     abb-server:
-        build: 
-            context: .
-            dockerfile: Dockerfile.server.compose
-            args: 
-                - "NODE_ENV=${NODE_ENV}"
-        image: kcod/abbback:latest
+        image: ganadara135/abbback:latest
         ports:
             - "4000:4000"
         environment:
@@ -33,16 +28,11 @@ services:
         container_name: abb-server
     
     abb-web:
-        build: 
-            context: .
-            dockerfile: Dockerfile.web.compose
-            args:
-                - "NODE_ENV=${NODE_ENV}"
-        image: kcod/abbfront:latest
-        environment:
-            - NODE_ENV=${NODE_ENV}
+        image: ganadara135/abbfront:latest
         ports:
             - "80:80"
+        environment:
+            - NODE_ENV=${NODE_ENV}
         depends_on:
             - abb-server 
         container_name: abb-web
