--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,59 +2,39 @@
   {
     "name": "production",
     "type": "postgres",
-    "host": "localhost",
+    "host": "docker-db",
     "port": 5432,
     "username": "postgres",
     "password": "postgres",
     "database": "graphql-ts-server-boilerplate",
     "synchronize": false,
     "logging": true,
-    "entities": ["src/entity/**/*.ts"],
-    "migrations": ["src/migration/**/*.ts"],
-    "subscribers": ["src/subscriber/**/*.ts"],
+    "entities": [ "packages/server/src/entity/**/*.ts"],
+    "migrations": ["packages/server/src/migration/**/*.ts"],
+    "subscribers": ["packages/server/src/subscriber/**/*.ts"],
     "cli": {
-      "entitiesDir": "src/entity",
-      "migrationsDir": "src/migration",
-      "subscribersDir": "src/subscriber"
+      "entitiesDir": "packages/server/src/entity",
+      "migrationsDir": "packages/server/src/migration",
+      "subscribersDir": "packages/server/src/subscriber"
     }
   },
   {
     "name": "development",
     "type": "postgres",
-    "host": "localhost",
+    "host": "docker-db",
     "port": 5432,
     "username": "postgres",
     "password": "postgres",
     "database": "graphql-ts-server-boilerplate",
     "synchronize": false,
     "logging": true,
-    "entities": ["src/entity/**/*.ts"],
-    "migrations": ["src/migration/**/*.ts"],
-    "subscribers": ["src/subscriber/**/*.ts"],
+    "entities": [ "packages/server/src/entity/**/*.ts"],
+    "migrations": ["packages/server/src/migration/**/*.ts"],
+    "subscribers": ["packages/server/src/subscriber/**/*.ts"],
     "cli": {
-      "entitiesDir": "src/entity",
-      "migrationsDir": "src/migration",
-      "subscribersDir": "src/subscriber"
-    }
-  },
-  {
-    "name": "test",
-    "type": "postgres",
-    "host": "localhost",
-    "port": 5432,
-    "username": "mac",
-    "password": "",
-    "database": "graphql-ts-server-boilerplate-test",
-    "synchronize": true,
-    "logging": false,
-    "dropSchema": true,
-    "entities": ["src/entity/**/*.ts"],
-    "migrations": ["src/migration/**/*.ts"],
-    "subscribers": ["src/subscriber/**/*.ts"],
-    "cli": {
-      "entitiesDir": "src/entity",
-      "migrationsDir": "src/migration",
-      "subscribersDir": "src/subscriber"
+      "entitiesDir": "packages/server/src/entity",
+      "migrationsDir": "packages/server/src/migration",
+      "subscribersDir": "packages/server/src/subscriber"
     }
   }
 ]
