--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,12 +2,12 @@
   {
     "name": "production",
     "type": "postgres",
-    "host": "docker-db",
+    "host": "rdb",
     "port": 5432,
     "username": "postgres",
     "password": "postgres",
     "database": "graphql-ts-server-boilerplate",
-    "synchronize": false,
+    "synchronize": true,
     "logging": true,
     "entities": [ "packages/server/src/entity/**/*.ts"],
     "migrations": ["packages/server/src/migration/**/*.ts"],
@@ -21,12 +21,12 @@
   {
     "name": "development",
     "type": "postgres",
-    "host": "docker-db",
+    "host": "rdb",
     "port": 5432,
     "username": "postgres",
     "password": "postgres",
     "database": "graphql-ts-server-boilerplate",
-    "synchronize": false,
+    "synchronize": true,
     "logging": true,
     "entities": [ "packages/server/src/entity/**/*.ts"],
     "migrations": ["packages/server/src/migration/**/*.ts"],
