--- a/.dockerignore
+++ b/.dockerignore
@@ -9,6 +9,9 @@
 !./ormconfig.json
 !./packages/web/
 !./packages/web/build/
-!./wait-for-it.sh
+
 !./packages/server/.env.development
 !./packages/server/.env.production
+
+!./packages/
+!./.env.local
