--- a/dockerCompose/Dockerfile.web.prod
+++ b/dockerCompose/Dockerfile.web.prod
@@ -1,12 +1,7 @@
-FROM node:12-alpine
+FROM node:12-alpine as build
 
 # set working directory
 WORKDIR /abb
-
-ARG REACT_APP_SERVER_URL
-ARG PORT
-RUN echo "REACT_APP_SERVER_URL: $REACT_APP_SERVER_URL"+':'+"$PORT"
-
 
 # add `/abb/node_modules/.bin` to $PATH
 ENV PATH /abb/web/node_modules/.bin:$PATH
@@ -26,12 +21,18 @@ RUN yarn install
 COPY ./packages/web/ ./packages/web/
 COPY ./packages/common/dist/ ./packages/common/dist/
 COPY ./packages/controller/dist/ ./packages/controller/dist/
-
+COPY ./packages/web/.env.production ./packages/web/.env 
 
 WORKDIR /abb/packages/web/
 
-# start app
-# CMD ["yarn", "start"]
+RUN yarn build
+
+# production environment
+FROM nginx:stable-alpine
+COPY --from=build /abb/packages/web/build /usr/share/nginx/html
+COPY ./packages/web/nginx_conf/default.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
 
 
 # COPY ./packages/web/build/ /usr/share/nginx/html
