--- a/dockerCompose/prod.server.yml
+++ b/dockerCompose/prod.server.yml
@@ -33,7 +33,7 @@ services:
             - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@rdb:5432/${POSTGRES_DB}
             - REDIS_HOST=redis
             - NODE_ENV=${NODE_ENV}
-            - FRONTEND_HOST=http://http://211.180.114.182
+            - FRONTEND_HOST=http://211.180.114.182
             # - REDIS_IP=redis
             - NODE_ENV=${NODE_ENV}
             - WAIT_HOSTS=rdb:5432
