--- a/dockerCompose/local.server.yml
+++ b/dockerCompose/local.server.yml
@@ -5,18 +5,35 @@ services:
         image: "redis"
         networks:
             - net-abb
+        ports:
+            - 6379:6379
         
     rdb:
         container_name: rdb
-        image: "postgres:9.6"
+        image: mariadb:10.5
+        # image: mysql:5.7
         volumes:
-            - rdb-data:/var/lib/postgresql/data
+            - rdb-data:/var/lib/mysql
         networks:
             - net-abb
-        environment: 
-            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-            - POSTGRES_USER=${POSTGRES_USER}
-            - POSTGRES_DB=${POSTGRES_DB}
+        ports:
+            - 3306:3306
+        environment:
+            - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+            - MYSQL_USER=${MYSQL_USER}
+            - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+            - MYSQL_DATABASE=${MYSQL_DATABASE}
+            - TZ=Asia/Seoul
+        command: --default-authentication-plugin=mysql_native_password
+        # image: "postgres:9.6"
+        # volumes:
+        #     - rdb-data:/var/lib/postgresql/data
+        # networks:
+        #     - net-abb
+        # environment: 
+        #     - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        #     - POSTGRES_USER=${POSTGRES_USER}
+        #     - POSTGRES_DB=${POSTGRES_DB}
 
     backend:
         container_name: backend
@@ -31,13 +48,13 @@ services:
         networks:
             - net-abb
         environment:
-            - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@rdb:5432/${POSTGRES_DB}
+            # - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@rdb:5432/${POSTGRES_DB}
             - REDIS_HOST=redis
             - FRONTEND_HOST=${FRONTEND_HOST}
             - PORT=${PORT}
-            # - REDIS_IP=redis
             - NODE_ENV=${NODE_ENV}
-            - WAIT_HOSTS=rdb:5432
+            # - WAIT_HOSTS=rdb:5432     # postgres
+            - WAIT_HOSTS=rdb:3306       # mysql
             - WAIT_HOSTS_TIMEOUT=300
             - WAIT_SLEEP_INTERVAL=30
             - WAIT_HOSTS_CONNECT_TIMEOUT=30
