--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -51,6 +51,7 @@
     "graphql-yoga": "^1.18.3",
     "ioredis": "^4.16.2",
     "merge-graphql-schemas": "^1.7.7",
+    "mysql": "^2.18.1",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.6",
     "pg": "^8.0.2",
