--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -96,5 +96,9 @@
       "**/rimraf/**",
       "**/tslint"
     ]
-  }
+  },
+  "engines" : { 
+    "node" : "12.16.3",
+    "yarn" : "1.22.4"
+   }
 }
