--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -68,5 +68,10 @@
       "**/react-scripts",
       "**/tslint"
     ]
-  }
+  },
+
+  "engines" : { 
+    "node" : "12.16.3",
+    "yarn" : "1.22.4"
+   }
 }
