--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -34,6 +34,8 @@
   "dependencies": {
     "@abb/common": "1.0.0",
     "@gql2ts/from-schema": "^1.8.0",
+    "apollo-server": "^2.14.1",
+    "apollo-server-express": "^2.14.1",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "connect-redis": "^4.0.4",
@@ -61,9 +63,6 @@
     "typeorm": "^0.2.24",
     "uuid": "^7.0.3",
     "yup": "^0.28.3"
-  },
-  "resolutions": {
-    "graphql": "14.6.0"
   },
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node --files=true src/index.ts",
@@ -97,8 +96,8 @@
       "**/tslint"
     ]
   },
-  "engines" : { 
-    "node" : "12.16.3",
-    "yarn" : "1.22.4"
-   }
+  "engines": {
+    "node": "12.16.3",
+    "yarn": "1.22.4"
+  }
 }
