--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -39,6 +39,7 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "connect-redis": "^4.0.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "2.13.0",
@@ -50,7 +51,6 @@
     "graphql-middleware": "^4.0.2",
     "graphql-shield": "^7.2.5",
     "graphql-tools": "^5.0.0",
-    "graphql-yoga": "^1.18.3",
     "ioredis": "^4.16.2",
     "merge-graphql-schemas": "^1.7.7",
     "mysql": "^2.18.1",
