--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -34,7 +34,7 @@
     "rimraf": "^3.0.2",
     "tslint": "^6.1.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "~3.6.3"
+    "typescript": "^3.9.5"
   },
   "resolutions": {
     "react": "16.9.0",
