--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,24 +5,26 @@
   "devDependencies": {
     "@gql2ts/types": "^1.9.0",
     "@types/bcryptjs": "^2.4.2",
-    "@types/connect-redis": "^0.0.13",
+    "@types/connect-redis": "^0.0.14",
     "@types/express": "^4.17.6",
     "@types/express-rate-limit": "2.9.8",
     "@types/express-session": "^1.17.0",
-    "@types/faker": "^4.1.11",
-    "@types/glob": "^5.0.35",
-    "@types/ioredis": "^3.2.7",
+    "@types/faker": "^4.1.12",
+    "@types/glob": "^7.1.2",
+    "@types/ioredis": "^4.16.4",
     "@types/jest": "^24.0.0",
     "@types/node": "^13.11.1",
-    "@types/node-fetch": "^1.6.9",
+    "@types/node-fetch": "^2.5.7",
     "@types/nodemailer": "^6.4.0",
     "@types/rate-limit-redis": "^1.7.1",
-    "@types/request-promise": "^4.1.41",
-    "@types/uuid": "^7.0.2",
-    "@types/ws": "^7.2.4",
-    "@types/yup": "^0.26.36",
+    "@types/request-promise": "^4.1.46",
+    "@types/uuid": "^8.0.0",
+    "@types/ws": "^7.2.5",
+    "@types/yup": "^0.29.2",
     "copyfiles": "^2.2.0",
+    "gql-merge": "^0.0.6",
     "gql2ts": "^1.10.1",
+    "graphql-to-typescript": "^0.1.2",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
     "ts-jest": "^25.3.1",
@@ -33,9 +35,8 @@
   },
   "dependencies": {
     "@abb/common": "1.0.0",
-    "@gql2ts/from-schema": "^1.8.0",
-    "apollo-server": "^2.14.1",
-    "apollo-server-express": "^2.14.1",
+    "@gql2ts/from-schema": "^2.0.0-4",
+    "apollo-server-express": "^2.14.3",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "connect-redis": "^4.0.4",
@@ -43,25 +44,28 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "2.13.0",
-    "express-session": "^1.17.0",
+    "express-session": "^1.17.1",
     "faker": "^4.1.0",
     "glob": "^7.1.6",
     "graphql": "14.6.0",
     "graphql-import": "^1.0.2",
     "graphql-middleware": "^4.0.2",
-    "graphql-shield": "^7.2.5",
-    "graphql-tools": "^5.0.0",
-    "ioredis": "^4.16.2",
-    "merge-graphql-schemas": "^1.7.7",
+    "graphql-shield": "^7.3.0",
+    "graphql-tools": "^6.0.9",
+    "ioredis": "^4.17.3",
+    "merge-graphql-schemas": "^1.7.8",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.0",
-    "nodemailer": "^6.4.6",
+    "nodemailer": "^6.4.8",
     "pg": "^8.0.2",
     "rate-limit-redis": "^1.7.0",
     "reflect-metadata": "^0.1.13",
     "request-promise": "^4.2.5",
-    "typeorm": "^0.2.24",
-    "uuid": "^7.0.3",
+    "ts-jest": "^26.1.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typeorm": "^0.2.25",
+    "typescript": "^3.9.5",
+    "uuid": "^8.1.0",
     "yup": "^0.28.3"
   },
   "scripts": {
@@ -70,7 +74,9 @@
     "start": "NODE_ENV=development nodemon",
     "test": "NODE_ENV=test jest --watch",
     "build": "rimraf ./dist && tsc && copyfiles -u 1 src/**/*.graphql dist",
-    "gen-schema-types": "ts-node src/scripts/createTypes.ts",
+    "merge:types": "gql-merge --out-file ./src/schema.graphql  src/modules/**/*.graphql src/modules/**/**/*.graphql",
+    "gen:schema": "graphql-to-typescript ./src/schema.graphql ./src/myTypes.d.ts",
+    "X_gen-schema-types": "ts-node src/scripts/createTypes.ts",
     "migrate:gen": "npx ts-node ./node_modules/.bin/typeorm migration:generate -n ListingTable -c development"
   },
   "jest": {
