--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -38,8 +38,6 @@
     "react-dom": "16.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "tslint": "^6.1.2",
-    "typescript": "~3.6.3",
     "yup": "^0.28.1"
   },
   "devDependencies": {
@@ -52,8 +50,8 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
     "@types/yup": "^0.26.31",
-    "tslint": "^6.1.1",
-    "typescript": "~3.6.3"
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.5"
   },
   "resolutions": {
     "react": "16.9.0",
