--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "rimraf ./dist && tsc",
-    "schema:download": "npx apollo client:download-schema --endpoint=http://localhost:4000 schema.json",
+    "schema:download": "npx apollo client:download-schema --endpoint=http://localhost:4000/graphql schema.json",
     "schema:downloadFromEx": "npx apollo client:download-schema --endpoint=http://49.50.163.26:4000 schema.graphql",
     "codegen:generate": "npx apollo client:codegen --localSchemaFile=./schema.json --target=typescript --includes=src/**/*.tsx --addTypename --outputFlat=./src/schemaTypes.ts",
     "gen:types": "yarn schema:download && yarn codegen:generate",
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "~3.1.4",
+    "apollo": "^2.28.3",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
     "react": "16.9.0",
@@ -28,7 +29,6 @@
     "@types/node": "^13.7.7",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.0",
-    "apollo": "2.26.0",
     "apollo-codegen": "^0.20.2",
     "react-router": "^5.1.2",
     "rimraf": "^3.0.2",
