--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -31,7 +31,7 @@
     "ts-node": "8.10.2",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "~1.18.0",
-    "typescript": "^3.9.5"
+    "typescript": "3.8.3"
   },
   "dependencies": {
     "@abb/common": "1.0.0",
