--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -51,7 +51,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/yup": "^0.26.31",
     "tslint": "^6.1.2",
-    "typescript": "^3.9.5"
+    "typescript": "3.8.3"
   },
   "resolutions": {
     "react": "16.9.0",
