--- a/dockerCompose/local.server.yml
+++ b/dockerCompose/local.server.yml
@@ -24,7 +24,8 @@ services:
             - MYSQL_PASSWORD=${TYPEORM_PASSWORD}
             - MYSQL_DATABASE=${TYPEORM_DATABASE}
             - TZ=Asia/Seoul
-        command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --init-connect='SET NAMES UTF8;' --innodb-flush-log-at-trx-commit=0
+        # command: mysqld --init-connect=SET NAMES UTF8; --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci 
+        command: ["mysqld", "--init-connect=SET NAMES UTF8mb4;", "--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci"]
         # command: --default-authentication-plugin=mysql_native_password
         # image: "postgres:9.6"
         # volumes:
