--- a/dockerCompose/local.server.yml
+++ b/dockerCompose/local.server.yml
@@ -24,9 +24,9 @@ services:
             - MYSQL_PASSWORD=${TYPEORM_PASSWORD}
             - MYSQL_DATABASE=${TYPEORM_DATABASE}
             - TZ=Asia/Seoul
-            - FOR_EMPTY_STR='SET NAMES UTF8mb4'
-        # command: mysqld --init-connect=SET NAMES UTF8; --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci 
-        command: ["mysqld", "--init-connect=SET NAMES UTF8mb4", "--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci"]
+            - FOR_EMPTY_STR=SET NAMES UTF8mb4   # No operation on this position
+        command: mysqld --init-connect=${FOR_EMPTY_STR} --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+        # command: ["mysqld", "--init-connect=SET NAMES UTF8mb4;", "--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci"]
         # command: --default-authentication-plugin=mysql_native_password
         # image: "postgres:9.6"
         # volumes:
@@ -67,6 +67,8 @@ services:
             - TYPEORM_DATABASE=${TYPEORM_DATABASE}
             - TYPEORM_CONNECTION=${TYPEORM_CONNECTION}
             - TYPEORM_HOST=${TYPEORM_HOST}
+
+            - FOR_EMPTY_STR=SET NAMES UTF8mb4               # 중요
         depends_on:
             - redis
             - rdb
