--- a/packages/controller/tsconfig.json
+++ b/packages/controller/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "outDir": "./dist/",
+    "outDir": "./dist",
     "module": "CommonJS",
     "target": "ESNext",
     "lib": [
@@ -12,7 +11,7 @@
     "sourceMap": true,
     "jsx": "react",
     "moduleResolution": "node",
-    "rootDir": "src",
+    // "rootDir": "src",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
