add ViewListing on Web and Controller

--- a/dockerCompose/local.web.yml
+++ b/dockerCompose/local.web.yml
@@ -21,7 +21,7 @@ services:
             - -c 
             - "yarn start"
 
-volumes:
-    rdb-data:
+# volumes:
+#     rdb-data:
 networks:
     net-abb:
