--- a/dockerCompose/local.web.yml
+++ b/dockerCompose/local.web.yml
@@ -12,7 +12,7 @@ services:
         networks:
             - net-abb
         environment:
-            - CHOKIDAR_USEPOLLING=true  # hot-reloading will work
+            - CHOKIDAR_USEPOLLING=true  # hot-reloading work
             - REACT_APP_SERVER_URL=${REACT_APP_SERVER_URL}:${SERVER_PORT}
         volumes:
             - ../:/abb/
