--- a/dockerCompose/Dockerfile.web.local.compose
+++ b/dockerCompose/Dockerfile.web.local.compose
@@ -4,8 +4,8 @@ FROM node:12-alpine
 WORKDIR /abb
 
 ARG REACT_APP_SERVER_URL
-ARG PORT
-RUN echo "REACT_APP_SERVER_URL: $REACT_APP_SERVER_URL"+':'+"$PORT"
+ARG SERVER_PORT
+RUN echo "REACT_APP_SERVER_URL: ${REACT_APP_SERVER_URL}"+':'+"${SERVER_PORT}"
 
 
 # add `/abb/node_modules/.bin` to $PATH
