--- a/packages/web/nginx_conf/default.conf
+++ b/packages/web/nginx_conf/default.conf
@@ -8,7 +8,9 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
-        try_files $uri $uri/ /index.html;           # 이 부분이 핵심, React 는 SPA 이므로  entry 파일 재호출하게 설정
+        error_page 405 =200 $uri;               # for Post Method 405 Not Allowed 
+        try_files $uri $uri/ /index.html?/$request_uri;
+        # try_files $uri $uri/ /index.html;           # 이 부분이 핵심, React 는 SPA 이므로  entry 파일 재호출하게 설정
     }
 
     #error_page  404              /404.html;
