--- a/dockerCompose/local.server.yml
+++ b/dockerCompose/local.server.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.6"
 services:
     redis:
         container_name: redis
@@ -24,8 +24,8 @@ services:
             - MYSQL_PASSWORD=${TYPEORM_PASSWORD}
             - MYSQL_DATABASE=${TYPEORM_DATABASE}
             - TZ=Asia/Seoul
-            - init-connect=SET NAMES UTF8mb4
-            # - FOR_EMPTY_STR='SET NAMES UTF8mb4'   # No operation on this position
+            # - init-connect=SET NAMES UTF8mb4
+            # --init-connect=${FOR_EMPTY_STR}    this is for Mac, Linux is different
         command: mysqld --init-connect=${FOR_EMPTY_STR} --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
         # command: ["mysqld", "--init-connect=SET NAMES UTF8mb4;", "--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci"]
         # command: --default-authentication-plugin=mysql_native_password
