--- a/dockerCompose/prod.server.yml
+++ b/dockerCompose/prod.server.yml
@@ -1,61 +1,69 @@
-version: "3"
+version: "3.6"
 services:
     redis:
         image: "redis"
         networks:
             - net-abb
+        ports:
+            - 6379:6379
         container_name: redis
         
     rdb:
-        image: "postgres:9.6"
+        container_name: rdb
+        image: mariadb:10.5
         volumes:
-            - rdb-data:/var/lib/postgresql/data
+            - rdb-data:/var/lib/mysql
         networks:
             - net-abb
-        environment: 
-            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-            - POSTGRES_USER=${POSTGRES_USER}
-            - POSTGRES_DB=${POSTGRES_DB}
-        container_name: rdb
-
+        ports:
+            - 3306:3306
+        environment:
+            - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+            - MYSQL_USER=${TYPEORM_USERNAME}
+            - MYSQL_PASSWORD=${TYPEORM_PASSWORD}
+            - MYSQL_DATABASE=${TYPEORM_DATABASE}
+            - TZ=Asia/Seoul
+            # --init-connect=SET\ NAMES\ UTF8mb4   this is for linux, Mac is   - FOR_EMPTY_STR=${FOR_EMPTY_STR}
+        command: mysqld --init-connect=SET\ NAMES\ UTF8mb4 --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    
     backend:
-        build: 
-            context: ../
-            dockerfile: ./dockerCompose/Dockerfile.server.prod.compose
-            args: 
-                - "NODE_ENV=${NODE_ENV}"
+        container_name: backend
+        # build: 
+        #     context: ../
+        #     dockerfile: ./dockerCompose/Dockerfile.server.prod.compose
+        #     args: 
+        #         - NODE_ENV=${NODE_ENV}
         image: ganadara135/abbback:latest
         ports:
-            - 4000:4000
+            - ${SERVER_PORT}:${SERVER_PORT}
         networks:
             - net-abb
         environment:
-            - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@rdb:5432/${POSTGRES_DB}
             - REDIS_HOST=redis
+            - FRONTEND_HOST=${FRONTEND_HOST}
+            - PORT=${SERVER_PORT}
             - NODE_ENV=${NODE_ENV}
-            - FRONTEND_HOST=http://211.180.114.182
-            # - REDIS_IP=redis
-            - NODE_ENV=${NODE_ENV}
-            - WAIT_HOSTS=rdb:5432
+            # - WAIT_HOSTS=rdb:5432     # postgres
+            - WAIT_HOSTS=rdb:3306       # mysql     # wait program 설정
             - WAIT_HOSTS_TIMEOUT=300
             - WAIT_SLEEP_INTERVAL=30
             - WAIT_HOSTS_CONNECT_TIMEOUT=30
-        command: sh -c "/wait && node dist/index.js"
+            
+            - TYPEORM_USERNAME=${TYPEORM_USERNAME}          # .env 파일과 server 파일의 위치가 달라서 직접 넣어줌()
+            - TYPEORM_PASSWORD=${TYPEORM_PASSWORD}          # 여기에 입력해 줘야 rdb 로 넘겨줌
+            - TYPEORM_DATABASE=${TYPEORM_DATABASE}
+            - TYPEORM_CONNECTION=${TYPEORM_CONNECTION}
+            - TYPEORM_HOST=${TYPEORM_HOST}
+            # - FOR_EMPTY_STR=${FOR_EMPTY_STR}
+        # command: sh -c "/wait && node dist/index.js"
         depends_on:
             - redis
             - rdb
-        container_name: backend
-    
-    # frontend:
-    #     image: ganadara135/abbfront:latest
-    #     ports:
-    #         - "80:80"
-    #     networks:
-    #         - net-abb
-    #     depends_on:
-    #         - backend 
-    #     container_name: frontend
-
+        command:
+            - /bin/sh
+            - -c 
+            - "/wait && node packages/server/dist/index.js"
+        
 volumes:
     rdb-data:
 networks:
