--- a/dockerCompose/prod.web.yml
+++ b/dockerCompose/prod.web.yml
@@ -1,16 +1,16 @@
-version: "3"
+version: "3.6"
 services:
     
     frontend:
         container_name: frontend
-        build: 
-            context: ../
-            dockerfile: ./dockerCompose/Dockerfile.web.prod.compose
         image: ganadara135/abbfront:latest
         ports:
             - "80:80"
         networks:
             - net-abb
+        environment:
+            - CHOKIDAR_USEPOLLING=true  # hot-reloading work
+            - REACT_APP_SERVER_URL=${REACT_APP_SERVER_URL}:${SERVER_PORT}
 
 volumes:
     rdb-data:
