--- a/dockerCompose/prod.web.yml
+++ b/dockerCompose/prod.web.yml
@@ -10,9 +10,10 @@ services:
             - net-abb
         environment:
             - CHOKIDAR_USEPOLLING=true  # hot-reloading work
-            - REACT_APP_SERVER_URL=${REACT_APP_SERVER_URL}:${SERVER_PORT}
+            - REACT_APP_SERVER_PORT=${REACT_APP_SERVER_PORT}        
+            - REACT_APP_SERVER_URL=${REACT_APP_SERVER_URL}
 
-volumes:
-    rdb-data:
+# volumes:
+#     rdb-data:
 networks:
     net-abb:
