--- a/dockerCompose/Dockerfile.web.prod.compose
+++ b/dockerCompose/Dockerfile.web.prod.compose
@@ -3,9 +3,6 @@ FROM node:12-alpine as build
 # set working directory
 WORKDIR /abb
 
-ARG REACT_APP_SERVER_URL
-ARG SERVER_PORT
-RUN echo "REACT_APP_SERVER_URL: ${REACT_APP_SERVER_URL}"+':'+"${SERVER_PORT}"
 
 # add `/abb/node_modules/.bin` to $PATH
 ENV PATH /abb/web/node_modules/.bin:$PATH
@@ -22,6 +19,9 @@ RUN yarn install
 # RUN yarn add react-scripts@3.4.1 -g --silent
 # RUN npm install react-scripts@3.4.1
 
+# .env 파일은 copy 안됨
+# COPY ./.env.prod ./.env
+
 # add app
 COPY ./packages/web/ ./packages/web/
 COPY ./packages/common/dist/ ./packages/common/dist/
@@ -32,6 +32,10 @@ WORKDIR /abb/packages/web/
 
 # .env 파일은 copy 안됨
 COPY ./.env.prod ./.env
+
+# ARG REACT_APP_SERVER_URL
+# ARG SERVER_PORT
+# RUN echo "REACT_APP_SERVER_URL: ${REACT_APP_SERVER_URL}"+':'+"${SERVER_PORT}"
 
 RUN yarn build
 
